--- a/index.html
+++ b/index.html
@@ -7,34 +7,57 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
         }
-        h1 {
+        /* Header Styles */
+        header {
+            background-color: #004d99;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
             font-size: 36px;
-            margin-top: 20px;
+            font-weight: bold;
         }
+        /* Content styles */
         .content {
-            margin-top: 30px;
+            margin: 40px 20px;
+            text-align: center;
+        }
+        .bio {
+            font-size: 18px;
+            margin-top: 20px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+            line-height: 1.6;
+            text-align: justify;
+            padding: 0 15px;
         }
         img {
             max-width: 90%;
             margin: 20px 0;
         }
-        .bio {
-            font-size: 18px;
-            margin-top: 20px;
+        /* Footer Styles */
+        footer {
+            background-color: #004d99;
+            color: white;
             text-align: center;
-            max-width: 80%;
-            margin-left: auto;
-            margin-right: auto;
-            line-height: 1.6;
+            padding: 15px 0;
+            font-size: 14px;
+            margin-top: 40px;
         }
     </style>
 </head>
 <body>
-    <h1>Re-Elect Billy Menz!</h1>
+    <!-- Header Section -->
+    <header>
+        Re-Elect Billy Menz!
+    </header>
+    
+    <!-- Main Content Section -->
     <div class="content">
         <img src="BillyMenz.png" alt="Billy Menz">
         <div class="bio">
@@ -44,5 +67,10 @@
         </div>
         <img src="BillyMenz_Contact_QR.png" alt="Contact QR Code">
     </div>
+    
+    <!-- Footer Section -->
+    <footer>
+        Paid for by the Committee to Re-Elect Billy Menz
+    </footer>
 </body>
 </html>
