--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <div class="content">
         <img src="BillyMenz.png" alt="Billy Menz">
         <div class="bio">
-            <p>Billy Menz is a proud Northeast Minneapolis dad, Edison High School teacher, and your Park Board Commissioner, working every day to make our parks vibrant, connected, and welcoming for all.</p>
-            <p>From championing youth sports to protecting our waterways, Billy's all in on keeping Minneapolis green, active, and united.</p>
-            <p>Let's keep Billy fighting for our kids, our environment, and the heart of our neighborhoods!</p>
+            <p><strong>Billy Menz</strong> is a proud Northeast Minneapolis dad, Edison High School teacher, and your Park Board Commissioner, working every day to make our parks <strong>vibrant</strong>, <strong>connected</strong>, and <strong>welcoming for all</strong>.</p>
+            <p>From championing youth sports to protecting our waterways, Billy's all in on keeping Minneapolis <strong>green</strong>, <strong>active</strong>, and <strong>united</strong>.</p>
+            <p>Let's keep Billy fighting for our <strong>kids</strong>, our <strong>environment</strong>, and the heart of our <strong>neighborhoods</strong>!</p>
         </div>
         <img src="BillyMenz_Contact_QR.png" alt="Contact QR Code">
     </div>
